--- a/research/model_v1/FinTech.ipynb
+++ b/research/model_v1/FinTech.ipynb
@@ -11977,7 +11977,11 @@
       "Epoch 100/1500\n",
       "5557/5557 [==============================] - 238s 43ms/sample - loss: 3.6727e-04\n",
       "Epoch 101/1500\n",
-      "1716/5557 [========>.....................] - ETA: 2:36 - loss: 3.3771e-04"
+      "5557/5557 [==============================] - 232s 42ms/sample - loss: 3.6627e-04\n",
+      "Epoch 102/1500\n",
+      "5557/5557 [==============================] - 237s 43ms/sample - loss: 3.6860e-04\n",
+      "Epoch 103/1500\n",
+      "4848/5557 [=========================>....] - ETA: 29s - loss: 3.4949e-04"
      ]
     }
    ],
